[tool.poetry]
name = "latexcornouaille"
version = "0.1.0"
description = "custom python package for latex"
authors = ["David Couronné <couronne.david@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
